﻿3.0
===
- Updated NHibernate.Search to NH3 compatible release
- Updated Lucene.net to 2.9.2

- Added the support for Field Camelcase Underscore (AR-296)
- Lazy loading for blob properties

3.0 beta (2010-12-10)
===
- Updated Castle Validator to 2.5.0
- Updated NHibernate to to 3.0 ga
- Updated Castle Core to 2.5.2 (Includes DynamicProxy)
  
- Implemented support for NHibernate Discriminator Formula (AR-166)
- Optimistic Lock Support(AR-290)
- Support for NET40 Client Profile (AR-289)
- Included NET40 and NET40 CP binaries on the release package
- Merged the Castle.ActiveRecord.Linq into the Castle.ActiveRecord project. (Out of the box LINQ support)

- Fixed: SaveCopyAndFlush() method in ActiveRecordMediator.cs returns null, but should return object (AR-282)
- Fixed: Formula BUG on property in ActiveRecord with NHibernate 3  (AR-293)

- Breaking: Now the SessionScopeWebModule, HybridWebThreadScopeInfo and WebThreadScopeInfo were moved to the Castle.ActiveRecord.Web assembly.

2.1 
===
- Updated Castle Validator to 1.1.1
- Updated NHibernate to to 2.1.4
- Updated Castle Core to 1.2
- Updated Castle DynamicProcy to 2.2
- Added support for NHibernate's new access methods "readonly" and "backfield".
- Added shorthand configuration: It is now possible to use
    <activerecord>
      <config db="MsSqlServer2005" csn="MyConnectionStringName"/>
    </activerecord>
  to get default configurations for different DBs (Sql Server, SQLite, Oracle, MySql and others)
- Added defaults for PrimaryKeyType unless specified explicitly:
    guid.comb for guids
    assigned for strings
    native otherwise
- Added basic support for CpBT (see IConversation interface and tests for usage)
- Added support for lazy="extra" by setting Lazy=true and ExtraLazy=true
  (Patch by Eddie Cianci, AR-ISSUE-279)

- Bugs fixed:
  AR-ISSUE-157
  AR-ISSUE-180
  AR-ISSUE-192
  AR-ISSUE-271
  AR-ISSUE-272
  AR-ISSUE-274
  AR-ISSUE-275
  AR-ISSUE-276
  AR-ISSUE-277
  AR-ISSUE-278
  AR-ISSUE-280

2.0 Beta1
===