@@ -1,0 +1,44 @@
+// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.ActiveRecord.Framework.Internal.Tests.Model
+{
+	using System;
+	using System.Collections.Generic;
+
+    [ActiveRecord(Lazy = false)]
+	public class HasAndBelongsToClassA : ActiveRecordBase
+	{
+		private int id;
+        private IList<ClassA> classA;
+
+		[PrimaryKey]
+		public int Id
+		{
+			get { return id; }
+			set { id = value; }
+		}
+
+        [HasAndBelongsToMany(Table = "ClassARelationTable",
+                             ColumnKey = "keycol",
+                             ColumnRef = "Other",
+                             Inverse = true,
+                             ForeignKey = "FK_FOREIGN_KEY_A")]
+		public IList<ClassA> ClassA
+		{
+			get { return classA; }
+			set { classA = value; }
+		}
+	}
+}
