@@ -904,6 +904,32 @@ namespace Castle.ActiveRecord.Framework.Internal.Tests
 			Assert.AreEqual(expected, xml);
 		}
 
+        [Test]
+        public void HasAndBelongsToMany() {
+            ActiveRecordModelBuilder builder = new ActiveRecordModelBuilder();
+            ActiveRecordModel model = builder.Create(typeof(HasAndBelongsToClassA));
+            Assert.IsNotNull(model);
+
+            String xml = Process(builder, model);
+
+            const string expected =
+                "<?xml version=\"1.0\" encoding=\"utf-16\"?>\r\n" +
+                "<hibernate-mapping  auto-import=\"true\" default-lazy=\"false\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns=\"urn:nhibernate-mapping-2.2\">\r\n" +
+                "  <class name=\"Castle.ActiveRecord.Framework.Internal.Tests.Model.HasAndBelongsToClassA, Castle.ActiveRecord.Framework.Internal.Tests\" table=\"HasAndBelongsToClassA\" lazy=\"false\">\r\n" +
+                "    <id name=\"Id\" access=\"property\" column=\"Id\" type=\"Int32\" unsaved-value=\"0\">\r\n" +
+                "      <generator class=\"native\">\r\n" +
+                "      </generator>\r\n" +
+                "    </id>\r\n" +
+                "    <bag name=\"ClassA\" access=\"property\" table=\"ClassARelationTable\" lazy=\"false\" inverse=\"true\">\r\n" +
+                "      <key column=\"keycol\" />\r\n" +
+                "      <many-to-many class=\"Castle.ActiveRecord.Framework.Internal.Tests.Model.ClassA, Castle.ActiveRecord.Framework.Internal.Tests\" column=\"Other\" foreign-key=\"FK_FOREIGN_KEY_A\" />\r\n" +
+                "    </bag>\r\n" +
+                "  </class>\r\n" +
+                "</hibernate-mapping>\r\n";
+
+            Assert.AreEqual(expected, xml);
+        }
+
 		[Test]
 		public void BelongsToWithFetch()
 		{
